--- a/index.html
+++ b/index.html
@@ -7,6 +7,63 @@
     <title>Portfolio Demo</title>
 </head>
 <body>
-    
+    <div class="container">
+        <section class="menu-area">
+            <ul>
+                <a href="#"><li>Home</li></a>
+                <a href="#"><li>About</li></a>
+                <a href="#"><li>Work</li></a>
+                <a href="#"><li>Protfolio</li></a>
+                <a href="#"><li>Contact</li></a>
+            </ul>
+        </section>
+        <section class="header-area">
+            <div class="text-area">
+                <h1>Hello, I'M</h1>
+                <h2>David Canxy</h2>
+                <p>A full stack allaround designer that placerat in massa consectetur</p>
+            </div>
+            <div class="image-area">
+                <img src="images/do not use this pic.png" alt="personal-img">
+            </div>
+            <a href="#">Hire Me</a>
+        </section>
+        <section class="about-area">
+            <div class="image-area">
+                <img src="images/do not use this pic2.png" alt="personal-img">
+            </div>
+            <div class="text-area">
+                <h3>About</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            </div>
+            <a href="#">Download CV</a>
+        </section>
+        <section class="project-area">
+            <div class="projects">
+                <img src="" alt="">
+                <h4>Power-x-gym (gym website)</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="projects">
+                <img src="" alt="">
+                <h4>Power-x-gym (gym website)</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="projects">
+                <img src="" alt="">
+                <h4>Power-x-gym (gym website)</h4>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+        </section>
+        <footer>
+            <img src="" alt="">
+            <a href="#"></a>
+            <div class="icon-area">
+                <a href="#"><img src="" alt=""></a>
+                <a href="#"><img src="" alt=""></a>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
