--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             </div>
         </section>
         <footer>
-            <img src="" alt="">
+            <img src="images/Group_33094_1.png" alt="banner">
             <a href="#"></a>
             <div class="icon-area">
-                <a href="#"><img src="" alt=""></a>
-                <a href="#"><img src="" alt=""></a>
-                <a href="#"><img src="" alt=""></a>
+                <a href="#"><img src="images/icons/image 7.png" alt="social-icon"></a>
+                <a href="#"><img src="images/icons/image 6.png" alt="social-icon"></a>
+                <a href="#"><img src="images/icons/Group 33059.png" alt="social-icon"></a>
             </div>
         </footer>
     </div>
