--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Demo</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <div class="container">
@@ -18,39 +21,39 @@
             </ul>
         </section>
         <section class="header-area">
-            <div class="text-area">
-                <h1>Hello, I'M</h1>
-                <h2>David Canxy</h2>
-                <p>A full stack allaround designer that placerat in massa consectetur</p>
+            <div class="head-text-area left-width">
+                <h1>HELLO, I'M</h1>
+                <h2>DAVID CANXY</h2>
+                <p>A full stack allaround designer that placerat in massa consectetur</p>                
+                <a class="button" href="#">Hire Me</a>
             </div>
-            <div class="image-area">
+            <div class="image-area right-width">
                 <img src="images/do not use this pic.png" alt="personal-img">
             </div>
-            <a href="#">Hire Me</a>
         </section>
         <section class="about-area">
-            <div class="image-area">
+            <div class="image-area left-width">
                 <img src="images/do not use this pic2.png" alt="personal-img">
             </div>
-            <div class="text-area">
+            <div class="text-area right-width">
                 <h3>About</h3>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <a href="#">Download CV</a>
             </div>
-            <a href="#">Download CV</a>
         </section>
         <section class="project-area">
             <div class="projects">
-                <img src="" alt="">
+                <img src="images/image 4.png" alt="Work slide">
                 <h4>Power-x-gym (gym website)</h4>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             </div>
             <div class="projects">
-                <img src="" alt="">
+                <img src="images/image 5.png" alt="Work slide">
                 <h4>Power-x-gym (gym website)</h4>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             </div>
             <div class="projects">
-                <img src="" alt="">
+                <img src="images/image 8.png" alt="Work slide">
                 <h4>Power-x-gym (gym website)</h4>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             </div>
