--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="head-text-area left-width">
                 <h1>HELLO, I'M</h1>
                 <h2>DAVID CANXY</h2>
-                <p>A full stack allaround designer that placerat in massa consectetur</p>                
+                <p>A full stack allaround designer that placerat in <br> massa consectetur</p>                
                 <a class="button" href="#">Hire Me</a>
             </div>
             <div class="image-area right-width">
@@ -38,7 +38,7 @@
             <div class="text-area right-width">
                 <h3>About</h3>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="#">Download CV</a>
+                <a class="button" href="#">Download CV</a>
             </div>
         </section>
         <section class="project-area">
