--- a/index.html
+++ b/index.html
@@ -59,9 +59,14 @@
             </div>
         </section>
         <footer>
-            <img src="images/Group_33094_1.png" alt="banner">
-            <a href="#"></a>
+            <div class="banner">
+                <p>WORK INQUIRY</p>
+                <a class="button" href="#">Let's Chat</a>
+                <img src="images/Group_33094_1.png" alt="banner">
+            </div>
             <div class="icon-area">
+                <p>STAY CONNECTED</p>
+                <p>canxy@protfolio.com</p>
                 <a href="#"><img src="images/icons/image 7.png" alt="social-icon"></a>
                 <a href="#"><img src="images/icons/image 6.png" alt="social-icon"></a>
                 <a href="#"><img src="images/icons/Group 33059.png" alt="social-icon"></a>
